--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ qdrant-client = "1.12.1"
 uuid = { version = "1", features = ["v4"] }
 tokio = { version = "1", features = ["full"] }
 serde_json = "1"
+serde = "1"
 tonic = "0.12.3"
 twox-hash = "2.0.1"
