--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
-name = "vevtor"
+name = "your-crate-name"
 version = "0.1.0"
+authors = ["Grayson Rieger graysonr12@icloud.com"]
 edition = "2021"
+license = "MIT" 
+description = "vector index"
+repository = "https://github.com/graysonrie/vevtor"
 
 [dependencies]
 fastembed = "4.0.0"
@@ -12,4 +16,4 @@ serde_json = "1"
 serde = "1"
 tonic = "0.12.3"
 twox-hash = "2.0.1"
-indexable_macro = { path = "indexable_macro" }
+indexable_macro = { path = "indexable_macro", version = "0.1.0" }
