--- a/indexable_macro/Cargo.toml
+++ b/indexable_macro/Cargo.toml
@@ -2,6 +2,9 @@
 name = "indexable_macro"
 version = "0.1.0"
 edition = "2021"
+authors = ["Grayson Rieger graysonr12@icloud.com"]
+license = "MIT" 
+description = "vector index macro"
 
 [dependencies]
 quote = "1.0"
