--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,4 @@ serde_json = "1"
 serde = "1"
 tonic = "0.12.3"
 twox-hash = "2.0.1"
-indexable_macro = { path = "indexable_macro", version = "0.1.0" }
+indexable_macro = "0.1.0"
